--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
        <script type="text/javascript" src="/assets/js/jquery.js"></script>
 
 
+
   </head>
   <div class="wrapper">
 
@@ -49,103 +50,13 @@
    
     </nav>
     </div>
-  <!--
-  <section id="alert" class="overlay">
-    <div class="msg" id="error">
-      <h1 class="title">Algo salio mal....</h1>
-      <p id="msg">
-      </p>
-      <div id="actions">
-      <div>
 
-    </div>
-    <div class="msg" id="detail">
-      <h1 class="title">Algo salio mal....</h1>
-      <p id="msg">
-      </p>
-      <div id="actions">
-      <div>
-    </div>
-    <button id="close">X</button>
-  </section>
--->
-  <!-- end alerts -->
   <div class="layout">
 
   <section id="content">
   <%= yield %>
   </section>
-  <!-- alerts -->
-  <!--
-   <section class="float-rigth" id="cash">
-   cash header 
-  <div class="header">
-    <div class="banner">
-      <img class="bigLogo" src="/assets/img/logo.png"/>
-    </div>
-        <div class="search card clearfix">
-    <input type="search" placeholder="Código de barras o descripcion" name="code" autofocus id="box"/>
-    <button class="searchbutton" id="toogleSearch">
-    </button>
-    </div>
 
-   <div class="card results" id="results">
-    </div>
-    </div>
-    -->
-     <!-- cash header -->
-     <!--
-    <div class="grid">
-    <div class="item">
-      <strong class="number">#</strong>
-      <strong class="code ">Código</strong>
-      <strong class="description">Descripcion</strong>
-      <strong class="saleI">Precio</strong></div>
-    <ul id="list-items" class="clearfix">
-    </ul>
-    </div>
-  </section>
-  <!-- stock-->
-<!--
-  <section id="stock">
-    <div class="bar ">
-      <ul class="clearfix">
-      <li><span class="current">Más Vendidos</span></li>
-      <li><span>Categorias</span></li>
-      <li><span>Antiguos</span></li>
-      <li class="stockSearch">
-        <div>
-        <input type="text" id="stockSearch" placeholder="Código de barras o descripcion"/>
-        <button class="clearfix ss"></button>
-        </div>
-      </li>
-      </ul>
-    </div>
-    <div class="grid">
-    <div class="little item">
-      <strong class="number">#</strong>
-      <strong class="code ">Código</strong>
-      <strong class="description">Descripcion</strong>
-      <strong class="saleI">Precio</strong>
-      <strong class="stock">Stock</strong>
-      <strong class="update">Última venta</strong>
-      </div>
-    <ul id="list" class="clearfix">
-    </ul>
-    </div>
-  </section>
-  <!--end stock-->
-  <!--
-  <section id="payments"></section>
-  <section id="users"></section>
-  <section id="events"></section>
-  <!--admin-->
-  <!--
-   <section id="admin">
-     <iframe src="views/error.stock"></iframe>
-   </section>
-<!--end admin -->
-<!-- end cash header -->
   </div>
   <div class="ticket" id="ticket">
   <p><span id="date" class="date">Abril 18, 2014 10:25</span></p>
@@ -159,10 +70,13 @@
   </div>
 </html>
       <script type="text/javascript" src="/assets/js/moment.js"></script>
-  <script type="text/javascript" src="/assets/js/core.js"></script>
-  <script type="text/javascript" src="/assets/js/models.js"></script>
 
   <script type="text/javascript" src="/assets/js/users.js"></script>
+
+  <script type="text/javascript" src="/assets/js/core.js"></script>
+  <script type="text/javascript" src="/assets/js/models.js"></script>
+         <script type="text/javascript" src="/assets/js/store.js"></script>
+
 
   <script type="text/javascript">
   $(document).ready(function(){
