content for tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,12 +59,7 @@
 
   </div>
   <div class="ticket" id="ticket">
-  <p><span id="date" class="date">Abril 18, 2014 10:25</span></p>
-  <p><label for="total">total</label>
-  <label name="total" id="total" type="text" disabled="true" >0.0</label></p>
-  <input name="pay" id="pay" type="text" value="0" /></p>
-  <label name="total" id="change" type="text"  ></label></p>
-  <div><button id="sold">cobrar</button><button id="cancel">cancelar</button></div>
+  <% yield :side %>
   </div>
 
   </div>
