--- a/app/views/stock/_stock.html.erb
+++ b/app/views/stock/_stock.html.erb
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="/assets/js/stockControler.js"></script>
 <section id="stock">
     <div class="bar ">
       <ul class="clearfix">
