--- a/app/views/stock/_cash.html.erb
+++ b/app/views/stock/_cash.html.erb
@@ -1,11 +1,5 @@
 <section class="float-rigth" id="cash">
-<script>
-$(document).ready(function(){
-  loadCore();
-});
-   
-
-</script>
+<script type="text/javascript" src="/assets/js/cashControler.js"></script>
 
   <!-- cash header -->
   <div class="header">
@@ -34,10 +28,10 @@ $(document).ready(function(){
   </section>
 
   <% content_for :side do %>
-  <p><span id="date" class="date">Abril 18, 2014 10:25</span></p>
-  <p><label for="total">total</label>
-  <label name="total" id="total" type="text" disabled="true" >0.0</label></p>
-  <input name="pay" id="pay" type="text" value="0" /></p>
-  <label name="total" id="change" type="text"  ></label></p>
-  <div><button id="sold">cobrar</button><button id="cancel">cancelar</button></div>
+    <p><span id="date" class="date">Abril 18, 2014 10:25</span></p>
+    <p><label for="total">total</label>
+    <label name="total" id="total" type="text" disabled="true" >0.0</label></p>
+    <input name="pay" id="pay" type="text" value="0" /></p>
+    <label name="total" id="change" type="text"  ></label></p>
+    <div><button id="sold">cobrar</button><button id="cancel">cancelar</button></div>
    <% end %>
