--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2,7 +2,7 @@
   font-family: 'Roboto',Arial, sans-serif;
   /*background-image: url("https://scontent-b-lax.xx.fbcdn.net/hphotos-xpf1/t31.0-8/1270298_4494877226249_4690543532153894416_o.jpg");
   b*/
-  background-image: url("../img/dd.png");
+  background-image: url("../img/dd.jpg");
   background-size: cover;
   background-attachment: fixed;
   margin: 0;
@@ -299,7 +299,8 @@ box{
 background-color: transparent;
 }
 
-  .ticket {
+.ticket {
+    display: none;
   	position: fixed;
   	top: 0;
   	right: 0;
@@ -354,10 +355,10 @@ display: block;
 	background-color: rgba(0,0,0,0.6);
 }
   .layout {
-  	left: 90px;
-right: 280px;
-position: absolute;
+position: relative;
 height: 100%;
+width: 80%;
+margin: 0 auto;
   }
 
 section {
@@ -435,11 +436,10 @@ background-size: cover;
   border-bottom: 1px solid rgba(200,200,200, 0.2);
 } 
 .bigLogo {
-  width: 100%;
+  width: 90%;
 }
 
 .grid, .header {
-  width: 960px;
     position: relative;
     margin: 0 auto;
 }
@@ -564,27 +564,30 @@ border-bottom: 1px solid rgba(223, 223, 223, 0.39);
 
 }
 
+
+
 .little span {
   overflow: hidden;
   text-overflow: ellipsis;
+  height: 1em;
 }
 .little .number {
-  width: 30px;
+  width: 6%;
 }
 .little .code {
-  width: 150;
+  width: 14%;
 }
 .little .description {
-  width: 350;
+  width: 45%;
 }
 .little .saleI {
-  width: 55;
+  width: 6%;
 }
 .little .stock {
-  width: 55;
+  width: 6%;
 }
 .little .update {
-  width: 100;
+  width: 18%;
 }
 
 .bar ul {
