--- a/app/views/stock/_stock.html.erb
+++ b/app/views/stock/_stock.html.erb
@@ -5,17 +5,11 @@
       <li><span class="current">Más Vendidos</span></li>
       <li><span>Categorias</span></li>
       <li><span>Antiguos</span></li>
-      <li class="stockSearch">
-        <div>
-        <input type="text" id="stockSearch" autofocus placeholder="Código de barras o descripcion">
-        <button class="clearfix ss"></button>
-        </div>
-      </li>
       </ul>
     </div>
     <div class="grid top50">
     <div class="little item">
-      <strong class="number">#</strong>
+      <strong class="number"><a href="/stock?sort=id">#</a></strong>
       <strong class="code ">Código</strong>
       <strong class="description">Descripcion</strong>
       <strong class="saleI">Precio</strong>
