--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,5 +1,5 @@
     html, body {
-  font-family: 'Roboto',Arial, sans-serif;
+  font-family: 'Open Sans',Arial, sans-serif;
   /*background-image: url("https://scontent-b-lax.xx.fbcdn.net/hphotos-xpf1/t31.0-8/1270298_4494877226249_4690543532153894416_o.jpg");
   b*/
   background-image: url("../img/dd.jpg");
@@ -27,6 +27,7 @@ iframe {
   width: 100%;
 height: 100%;
 }
+/*
 #nav {
 
 	min-height: 595px;
@@ -48,6 +49,7 @@ list-style: none;
 -webkit-padding-start: 0;
 padding-left: 0;
 }
+*/
   .wrapper {
 	  position: relative;
 	  min-height: 100%;
@@ -81,7 +83,7 @@ text-align: center;
   position: relative;
   width: 70;
 }
-
+/*
 .logo {
   height: 40px;
   position: relative;
@@ -89,7 +91,8 @@ text-align: center;
   background-image: url("../img/stocker.png");
   background-size: 95px;
 }
-
+*/
+/*
 #nav-items li{
 	height: 75px;
 }
@@ -133,7 +136,7 @@ white-space: nowrap;
   -webkit-animation-delay: 0;
 }
 
-
+*/
 
 #nav-items li:hover {
 	cursor: pointer;
@@ -150,24 +153,25 @@ white-space: nowrap;
   }
 
 .results {
-  line-height: 16px;
-  padding: 13px;
-  width: 500px;
-  margin: 0 auto;
-  margin-top: -36px;
-  text-align: left;
-  position: relative;
-  z-index: 5;
+ line-height: 16px;
+width: 527px;
+margin: 0 auto;
+text-align: left;
+position: relative;
+z-index: 5;
+left: 58px;
+height: 350px;
+overflow: hidden;
 }
 
 .results li {
   list-style: none;
-  position: relative;
-  width: 486;
-  font-size: 15px;
-  background-color: white;
-  border-bottom: 1px solid rgba(51, 51, 51, 0.3);
-  padding: 7;
+position: relative;
+width: 96%;
+font-size: 18px;
+background-color: rgba(0, 0, 0, 0.55);
+border-bottom: 1px solid rgba(51, 51, 51, 0.3);
+padding: 7;
 }
 
 .results li:hover {
@@ -240,59 +244,10 @@ box{
 
   }
 
-   input[type=email],
-  input[type=number],
-  input[type=password],
-  input[type=search],
-  input[type=text],
-  input[type=url] {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-  display: inline-block;
-  height: 32px;
-  padding: 0 8px;
-  margin: 0;
-  background: #fff;
-  border: 1px solid #d9d9d9;
-  border-top: 1px solid #c0c0c0;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -moz-border-radius: 1px;
-  -webkit-border-radius: 1px;
-  border-radius: 1px;
-  font-size: 15px;
-  color: #404040;
-  }
-
-   input[type=email]:hover,
-  input[type=number]:hover,
-  input[type=password]:hover,
-  input[type=tel]:hover,
-  input[type=text]:hover,
-  input[type=url]:hover {
-  border: 1px solid #b9b9b9;
-  border-top: 1px solid #a0a0a0;
-  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  }
-  input[type=email]:focus,
-  input[type=number]:focus,
-  input[type=password]:focus,
-  input[type=search]:focus,
-  input[type=text]:focus,
-  input[type=url]:focus {
-  outline: none;
-  border: 1px solid transparent;
-
-  }
+   
   #box {
-  	border: 1px rgba(0, 0, 0, 0);
-	 color: rgb(51, 51, 51);
-  	width: 428px;
     font-size: 20;
+color: rgb(255, 255, 255);
   }
 
   .search, .searchbutton {
@@ -365,7 +320,7 @@ section {
   	position: relative;
     text-align: center;
   	width: 100%;
-  	height: 100%;
+  	height: 81%;
     float:left;
   }
 
@@ -432,7 +387,7 @@ background-size: cover;
 
 
 .header {
-  height: 250;
+  height: 200;
   border-bottom: 1px solid rgba(200,200,200, 0.2);
 } 
 .bigLogo {
@@ -444,6 +399,9 @@ background-size: cover;
     margin: 0 auto;
 }
 
+i {
+  text-decoration: none;
+}
 .grid {
   font-size: 17;
   max-height: 550px;
