--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,32 @@
-<h1>New user</h1>
+<html lang="es"><head>
+  <meta charset="utf-8">  
+  <head>
+    <link rel="stylesheet" type="text/css" href="/assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/login.css">
+  </head>
+  <div class="wrapper">
+
+  <div class="main content clearfix" >
+  <div class="banner top">
+  <h1><i class="logo"></i></h1>
+   <% if flash[:alert] %>
+        <h2 class="notice"><%= flash[:alert] %></h2>
+    <% else %>
+      <h2>Registrandose en Stocker</h2>
+
+  <% end %>
+      
+  </div>
+<div class="card signin-card top clearfix">
 
 <%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
+<a href ="/login">Ya estás registrado? Ingresa aquí</a>
+</div>
+
+
+  </div>
+  
+  </div>
+  </head>
+
