--- a/public/assets/css/new.css
+++ b/public/assets/css/new.css
@@ -87,15 +87,14 @@ header,nav {
 }
 
 .upper {
-background-size: 95px;
-height: 100%;
-width: 80px;
-vertical-align: middle;
-border-bottom: 1px solid rgb(255, 58, 49);
-overflow: hidden;
-color: rgb(255, 255, 255);
-background-repeat: no-repeat;
-background-position: -4px;
+	background-size: 150px;
+	height: 100%;
+	width: 150px;
+	vertical-align: middle;
+	border-bottom: 1px solid rgb(255, 58, 49);
+	overflow: hidden;
+	color: rgb(255, 255, 255);
+	background-repeat: no-repeat;
 }
 
 
@@ -260,6 +259,10 @@ li.ss {
 width: 25%;
 height: 100%;
 background-color: rgb(186, 183, 182);
+}
+
+.p66 {
+	width: 66% !important;
 }
 
 #context {
