--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -1,6 +1,6 @@
 p    html, body {
   font-family: 'Open Sans',Arial, sans-serif;
-  background-image: url("../img/dd.jpg");
+  background-image: url("../img/ddc.jpg");
   background-size: cover;
   margin: 0;
   padding: 0;
