--- a/public/assets/css/new.css
+++ b/public/assets/css/new.css
@@ -28,7 +28,7 @@ width: 38%;
   }
 
 body {
-	 font-family: 'RobotoDraft';
+	 font-family: 'RobotoDraft', Arial;
 	 font-size: 0.9em;
 	 background-color: #fDfDfD;
 	color: #232323;
