--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,23 +1,46 @@
-<h1>Listing items</h1>
+  <section id="content">
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<script type="text/javascript" src="/assets/js/stockControler.js"></script>
+<section id="stock">
+    <div class="bar ">
+      <ul class="clearfix">
+      <li><span class="current">Más Vendidos</span></li>
+      <li><span>Categorias</span></li>
+      <li><span>Antiguos</span></li>
+      <li class="stockSearch">
+        <div>
+              <%= link_to 'Nuevo Elemento', new_item_path %>
 
-  <tbody>
+        </div>
+      </li>
+      </ul>
+    </div>
+    <div class="grid top50">
+    <div class="little item">
+      <strong class="number"><a href="/stock?sort=id">#</a></strong>
+      <strong class="code ">Código</strong>
+      <strong class="description">Descripcion</strong>
+      <strong class="saleI">Precio</strong>
+      <strong class="stock">Stock</strong>
+      <a href="/stock?s=last_check"><strong class="update">Última venta</strong></a>
+      </div>
+    <ul id="list" class="clearfix">
     <% @items.each do |item| %>
-      <tr>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <a href="/items/<%= item.slug%>">
+        <div class="little item">
+          <span class="number"> <%= item.id %> </span>
+          <span class="code"><%= item.code %></span>
+          <span class="description"><%= item.description %></span>
+          <span class="saleI"><%= item.sale %></span>
+          <span class="stock"><%= item.stock %></span>
+          <span class="update">prettyTime(item.last_check)</span>
+          <span class="destroy"><%= link_to 'x', item, method: :delete, data: { confirm: 'Are you sure?' } %></span>
+        </div>
+      </a>
+       
       </tr>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Item', new_item_path %>
+    </ul>
+    </div>
+  </section>
+  </section>
