--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New item</h1>
+<link rel="stylesheet" type="text/css" href="/assets/css/login.css">
+<div class="middle">
+<h1>Registrar elemento al stock</h1>
 
 <%= render 'form' %>
 
+
+</div>
 <%= link_to 'Back', items_path %>
