--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+ <div class="ticket" id="ticket">
+  </div>
+<div class="layout">
+  <section class="float-rigth" >
+  </section>
+</div>
+ 
+    
+  
