--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,8 +1,8 @@
     html, body {
-  font-family: 'Open Sans',Arial, sans-serif;
+  font-family: 'Open Sans',Arial;
   /*background-image: url("https://scontent-b-lax.xx.fbcdn.net/hphotos-xpf1/t31.0-8/1270298_4494877226249_4690543532153894416_o.jpg");
   b*/
-  background-image: url("../img/dd.jpg");
+  background-image: url("../img/ddc.jpg");
   background-size: cover;
   background-attachment: fixed;
   margin: 0;
@@ -52,12 +52,10 @@ padding-left: 0;
 */
   .wrapper {
 	  position: relative;
-	  min-height: 100%;
+width: 100%;
+height: 90%;
   }
- .content {
-  	padding-left: 10px;
- 	padding-right: 10px;
- }
+    
 
   .clearfix:before,
   .clearfix:after {
@@ -82,6 +80,14 @@ text-align: center;
   top: 12;
   position: relative;
   width: 70;
+}
+
+#stock {
+  position: relative;
+text-align: center;
+width: 98%;
+height: 85%;
+margin: 0 auto;
 }
 /*
 .logo {
@@ -144,9 +150,6 @@ white-space: nowrap;
 }
 
   .card {
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
   -moz-box-shadow: -1px 0px 2px 2px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: -1px 0px 2px 2px rgba(0, 0, 0, 0.2);
   box-shadow:-1px 0px 2px 2px rgba(0, 0, 0, 0.2);
@@ -167,15 +170,15 @@ overflow: hidden;
 .results li {
   list-style: none;
 position: relative;
-width: 96%;
+width: 98%;
 font-size: 18px;
-background-color: rgba(0, 0, 0, 0.55);
+background-color: transparent;
 border-bottom: 1px solid rgba(51, 51, 51, 0.3);
 padding: 7;
 }
 
 .results li:hover {
-  background: transparent;
+  background: rgba(3, 3, 3, 0.58);
   color: white;
   cursor: pointer;
 }
@@ -255,21 +258,24 @@ background-color: transparent;
 }
 
 .ticket {
-    display: none;
-  	position: fixed;
-  	top: 0;
-  	right: 0;
-  	width: 238px;
-    padding: 20 20;
-  	height: 100%;
-  	background-color: rgb(18,19,21);
-    box-shadow: -2px 2px 5px rgba(18,19,20,0.5);
-  }
-#total{
-  color: rgb(255,58,49);
-font-size: 96;
-display: block;
+  position: absolute;
+  top: 8%;
+  right: 1%;
+  width: 23%;
+  padding: 1% 1%;
+  height: 70%;
+  background-color: rgba(0, 0, 0, 0);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+  border: 1px solid rgba(221, 221, 221, 0.3);
 }
+
+.ticket .controls {
+  bottom: 1%;
+  position: absolute;
+  width: 100%;
+}
+
+
 
 .date {
   font-size: 27;
@@ -294,34 +300,43 @@ display: block;
   color: white;
 }
 
+#ticket label {
+  color: whitesmoke
+}
+
+#total{
+  color: rgb(255,58,49) !important;
+  font-size: 96;
+  display: block;
+}
+
 #pay {
-  display: none;
   padding: 2;
-  background: transparent;
-  background: transparent;
-  border: none;
-  font-size: 97;
-  width: 100%;
-  height: 120;
-  color: white;
+background: rgba(0, 0, 0, 0);
+background: rgba(0, 0, 0, 0);
+border: none;
+font-size: 97;
+width: 100%;
+height: 120;
+color: rgb(255, 255, 255);
+border-bottom: 1px solid rgba(221, 221, 221, 0.3);
 }
 
 .searchOn{
 	background-color: rgba(0,0,0,0.6);
 }
-  .layout {
-position: relative;
-height: 100%;
-width: 80%;
-margin: 0 auto;
-  }
+.layout {
+  position: relative;
+  height: 100%;
+  width: 71%;
+  padding-left: 1%;
+}
 
 section {
   	position: relative;
     text-align: center;
   	width: 100%;
   	height: 81%;
-    float:left;
   }
 
   #cash {
@@ -388,7 +403,7 @@ background-size: cover;
 
 .header {
   height: 200;
-  border-bottom: 1px solid rgba(200,200,200, 0.2);
+  border-bottom: 1px solid rgba(221, 221, 221, 0.3);
 } 
 .bigLogo {
   width: 90%;
@@ -440,16 +455,16 @@ i {
 .grid
 
 .number {
-  width: 70px;
+  width: 8%;
 }
 .code {
-  width: 250;
+  width: 20%;
 }
 .description {
-  width: 450;
+  width: 60%;
 }
 .saleI {
-  width: 100;
+  width: 12%;
 }
 
 #list-items,#list {
@@ -501,6 +516,7 @@ left: 3;
 
 #change {
   font-size: 97;
+  color:rgb(173, 255, 47) !important;
 }
 
 #alert div {
@@ -612,6 +628,12 @@ font-size: 17;
   margin: 0 auto;
   width: 20;
 }
+
+.middle {
+  width: 50%;
+margin: 0 auto;
+text-align: center;
+}
   /* *************************************************************/
   ::-webkit-scrollbar {
     display: none;
@@ -633,3 +655,22 @@ font-size: 17;
 }
 
 /*************************************************************/
+  .signin-card {
+  width: 274px;
+  padding: 40px 40px;
+  margin: 0 auto;
+  
+  }
+  .signin-card input[type=email],
+  .signin-card input[type=password],
+  .signin-card input[type=text],
+  .signin-card input[type=submit] {
+  width: 100%;
+  display: block;
+  margin-bottom: 10px;
+  z-index: 1;
+  position: relative;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  }
