finalizando el cobro

--- a/app/views/stock/admin.html.erb
+++ b/app/views/stock/admin.html.erb
@@ -1,14 +1,23 @@
 <h1>
-	Estadisticas
+	Estadisticas de venta
+	(github like)
 </h1>
 
 <h1>
 	Total del dia
 </h1>
 <h1>
-	Articulos vendidos
+	# Articulos vendidos
 </h1>
 
 <h1>
 	Distribucion del stock
+</h1>
+
+<h1>
+	Articulos mas vendidos
+</h1>
+
+<h1>
+	Estadisticas de hora y dia
 </h1>
