--- a/app/views/stock/cash.html.erb
+++ b/app/views/stock/cash.html.erb
@@ -43,5 +43,8 @@
     </div>
     <script type="text/javascript" src="/assets/js/ticketController.js"></script>
   </div>
-    
-  
+
+<div style="display:none">
+  <%= form_for(@ticket) do |f| %>
+  <% end %>
+  </div> 
