--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,14 +1,13 @@
 
-<%= @item.to_json%>
-
   <div class="layout">
   <section class="float-rigth" id="cash">
   <!-- cash header -->
-  <div class="header">
-    </div>
      <!-- cash header -->
     <div class="grid">
-   
+   		<h1>
+   		Crunch card for the item
+   		same card for the day
+   		</h1>
     </div>
   </section>
 </div>
