--- a/app/views/stock/cash.html.erb
+++ b/app/views/stock/cash.html.erb
@@ -23,6 +23,7 @@
   </section>
 </div>
   <div class="ticket" id="ticket">
+  <p><span id="notice"></span></p>
     <p><span id="date" class="date"></span></p>
     <p>
       <label for="total">Total </label>
