--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -674,3 +674,15 @@ text-align: center;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   }
+
+  form input {
+    background: rgba(0, 0, 0, 0);
+  border: 1px solid rgba(221, 221, 221, 0.3);
+  padding: 7px;
+  margin: 5;
+  border-radius: 2px;
+  width: 98%;
+  color: rgb(255, 255, 255);
+  /* font-weight: bold; */
+  font-size: 15px;
+  }
